--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,12 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  background-color: rgb(245,249,253);
+}
+.nav-bar {
+  background-color: #ffffff;
+  width: 100%;
+  height: 10vh;
+  border-bottom: 4px solid #ccc;
+}
