--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 .nav-bar {
   background-color: #ffffff;
   width: 100%;
-  height: 10vh;
+  padding: 10px;
+  box-sizing: border-box;
   border-bottom: 4px solid #ccc;
 }
