--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
 * {
   margin: 0;
   padding: 0;
 }
 body {
   background-color: rgb(245,249,253);
+  font-family: 'IBM Plex Mono', monospace;
+  height: 100%;
 }
 .nav-bar {
-  background-color: #ffffff;
+  background-color: #212121;
   width: 100%;
-  padding: 10px;
   box-sizing: border-box;
-  border-bottom: 4px solid #ccc;
+  border-bottom: 1px solid #ccc;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -18,9 +20,53 @@ body {
 }
 .logo {
   justify-self: start;
-  color: black;
+  color: #fff;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.image-logo {
+  width: 30%;
+  display: block;
 }
 .search-bar {
   justify-self: end;
+  margin-right: 20px;
+}
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 36%;
+}
+.home {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.input {
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #000;
+  padding: 7px 20px;
+  font-size: 17px;
+  text-align: center;
+}
+.input:focus {
+  outline: none;
+}
+.button-submit {
+  color: #fff;
+  font-size: 19px;
+  padding: 8px 22px;
+  text-decoration: none;
+}
+.button-submit:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
