--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-  background-color: rgb(245,249,253);
+  background-color:white;
   font-family: 'IBM Plex Mono', monospace;
   height: 100%;
 }
@@ -69,4 +69,27 @@ body {
 .button-submit:hover {
   cursor: pointer;
   text-decoration: underline;
+}
+.forecast {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+.forecast-items {
+  display: flex;
+  width: 33%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: .3s;
+  text-decoration: none;
+}
+.forecast-items:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+h2 {
+  color: #000;
 }
