--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono');
+@import url('https://fonts.googleapis.com/css?family=Mukta');
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Mukta', sans-serif;
 }
 body {
   background-color:white;
-  font-family: 'IBM Plex Mono', monospace;
   height: 100%;
 }
 .nav-bar {
