--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Mukta');
+@import url('https://fonts.googleapis.com/css?family=Mukta|Mukta:800');
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +18,7 @@ body {
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   align-items: center;
+  padding: 10px;
 }
 .logo {
   justify-self: start;
