--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,14 @@
   font-family: 'Mukta', sans-serif;
 }
 body {
-  background-color:white;
+  background-color:rgb(251,251,251);
   height: 100%;
 }
 .nav-bar {
-  background-color: #212121;
+  background-color: white;
   width: 100%;
   box-sizing: border-box;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid rgb(240,240,240);
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -22,7 +22,7 @@ body {
 }
 .logo {
   justify-self: start;
-  color: #fff;
+  color: black;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -51,11 +51,9 @@ body {
   align-items: center;
 }
 .input {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid #000;
-  padding: 7px 20px;
+  border: 1px solid rgb(220,220,220);
+  border-radius: 8px;
+  padding: 7px 13px;
   font-size: 17px;
   text-align: center;
 }
