--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ body {
   outline: none;
 }
 .button-submit {
-  color: #fff;
+  color: #000;
   font-size: 19px;
   padding: 8px 22px;
   text-decoration: none;
